# munsu-bylaws-clause-card-repair-package

./: .gitignore  CLAUDE_FABLE_5_FIX_PROMPT.md  GBRAIN_UPLOAD_GUIDE.md  README.md
compiler/: AGENTS.md  pyproject.toml
compiler/src/legal_corpus/: __init__.py  cli.py  compiler.py  config.py  export_records.py  extraction_quality.py  frontmatter.py  manifest.py  production_docs.py  reports.py  retrieval_gold.py  scaffold.py  source_records.py  structure_records.py  validation_records.py
compiler/src/legal_corpus/exporters/: __init__.py  gbrain.py
compiler/src/legal_corpus/extractors/: __init__.py  local_pdf.py  markdown.py
compiler/src/legal_corpus/parsers/: __init__.py  legal_structure.py
compiler/src/legal_corpus/providers/: __init__.py  reducto.py
compiler/src/legal_corpus/validators/: __init__.py  gbrain.py
compiler/tests/: test_compile_cli.py  test_compile_export.py  test_compile_structure.py  test_export_records.py  test_extraction_quality.py  test_gbrain_export.py  test_gbrain_validation.py  test_gold_retrieval.py  test_init_cli.py  test_legal_retrieval_contract.py  test_legal_structure_models.py  test_legal_structure_parser.py  test_manifest_schema.py  test_markdown_extraction.py  test_munsu_bylaws_fix_regressions.py  test_munsu_profiles.py  test_production_docs.py  test_reducto_provider.py  test_report_cli.py  test_scaffold_contract.py  test_source_records.py  test_validate_cli.py  test_validation_records.py
compiler/tests/fixtures/: gold-questions.yaml
compiler/tests/fixtures/expected-corpus/: RESOLVER.md  index.md  schema.md
(+1245 files in other folders)
